syntax = "proto3";
package chatserver;

option go_package = "github.com/VictoriousAnnro/HomeWork3/tree/Videobranch";

message FromClient{

    string name = 1;
    string body = 2;
}

message FromServer{

    string name = 1;
    string body = 2;
}

service Services{
    rpc ChatService(stream FromClient) returns (stream FromServer){};
}