syntax = "proto3";

option go_package = "github.com/VictoriousAnnro/HomeWork3/proto";

package proto;

// compile command:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/template.proto


// The template service definition
// you can call it whatever you want
service publish
{
    //request to join is sent, a stream of messages is recieved in return
    rpc JoinServer (Request) returns (stream Mess);
    //one message is sent and one is recieved
    rpc PublishMessage (Request) returns (Ack);

}

//Request is a type containing a string and int. They are intialized as the first and second parameter value.
message Request {
    string clientName = 1;
    string clientInput = 2;
}

//timestring or whatever value is here must be set! just set it to 1 as done here
message Ack {
    string ackMessage = 1;
}

message Mess {
    string message = 1;
}